--- a/.github/workflows/build-toolchain.yml
+++ b/.github/workflows/build-toolchain.yml
@@ -215,10 +215,11 @@ jobs:
       - id: context
         name: Generate Build Context
         run: |
-          # TODO(compnerd) can we make this more silent?
+          echo "::group::Install libxml2-utils"
           sudo DEBIAN_FRONTEND=noninteractive apt-get -qq update -yq
           sudo DEBIAN_FRONTEND=noninteractive apt-get -qq -o Dpkg::Use-Pty=0 install -yq repo libxml2-utils
-
+          echo "::endgroup::"
+          
           # Which branch is this workflow based on
           branch_version_string=${{ inputs.swift_version || '0.0.0' }}
           if [[ $branch_version_string == *.* ]]; then
